# financial-dashboard

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docs/: fase-0-validacao.md  fase-1-conclusao.md  fase-1-fundacao.md  fase-2-financeiro-basico.md  fase-3-importacoes.md  fase-4-asaas.md  fase-5-pdv-estoque.md  fase-6-compras-fornecedores.md  fase-7-documentos-google-sheets.md  fase-8-planejamento-projecoes.md  fase-8-validacao-sandbox-asaas.md
docs/adr/: ADR-001-interface-desktop.md  ADR-002-segredos-e-configuracao.md  ADR-003-persistencia-local.md  ADR-004-asaas-polling-vs-webhooks.md  ADR-005-integracao-pdv.md  ADR-006-compras-estoque.md  ADR-007-documentos-google-credentials.md  ADR-008-planejamento-local.md  ADR-009-operacoes-sensiveis-aprovacao-dupla.md  ADR-010-executor-asaas-idempotente.md
migrations/: env.py
migrations/versions/: 0001_foundation.py  0002_finance_core.py  0003_payables_receivables.py  0004_installments_recurrence.py  0005_due_entry_external_id.py  0006_asaas_payments.py  0007_asaas_reconciliations.py  0008_pdv_snapshots.py  0009_purchases_suppliers.py  0010_documents_google_sheets.py  0011_sensitive_operation_approvals.py  (+1 more)
tests/: test_app_cli.py  test_approvals.py  test_asaas.py  test_asaas_write_executor.py  test_auth.py  test_backup.py  test_dashboard.py  test_database.py  test_deployment.py  test_documents_google_sheets.py  test_exports.py  test_finance.py  test_foundation_services.py  test_imports.py  test_pdv_sync.py  test_planning.py  test_postgres_rehearsal.py  test_purchases.py  test_ui_smoke.py
(+35 files in other folders)
