[project]
name = "basilica-financeiro"
version = "0.1.0"
description = "Plataforma desktop local para controle financeiro institucional."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.1",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "keyring>=25.7.0",
    "pydantic-settings>=2.2.1",
    "PySide6>=6.7.0",
    "SQLAlchemy>=2.0.30",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pyinstaller>=6.11.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.coverage.run]
omit = [
    "src/basilica_financeiro/__main__.py",
    "src/basilica_financeiro/app.py",
    "src/basilica_financeiro/logging_config.py",
    "src/basilica_financeiro/models.py",
    "src/basilica_financeiro/ui/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basilica_financeiro"]
